	tourney one too.
	(PokerTableTestCase.test21_syncDatabase): Added a tourneyEndTurn
	call here as well.
	(MockService.tourneyEndTurn): Wrote function.
	Set verbose to 4 throughout.
	(MockService.loadHand): Forced return value to include the handId requested
	(MockService.updatePlayerMoney): Added additional values for new
	tests in the example hand.

2008-01-22  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (MockService.updatePlayerMoney):
	Made actual tests in function.
	(MockService.updatePlayerRake): Made actual tests in function.
	(MockService.resetBet): Made actual tests in function.

2008-01-21  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in
	(PokerTableTestCase.test08_player_has_trouble_joining): Added test
	for two kick attempts in a row.
	(PokerTableTestCase.test13_disconnect): Wrote function.
	(PokerTableTestCase.test14_closed_games): Wrote function.
	(PokerTableTestCase.test08_5_kick): Wrote function.
	(PokerTableTestCase.test08_7_sitout): Wrote function.
	(PokerTableTestCase.createPlayer): Added clientClass option.
	(MockClientWithRemoveTable): Created class.
	(MockClientWithRemoveTable.removeTable): Wrote function.
	(MockClientWithTableDict): Created class.
	(MockClientWithTableDict.__init__): Wrote function.
	(MockClientWithTableDict.addPlayer): Wrote function.
	(MockService.destroyTable): Wrote function.
	(PokerTableTestCaseTransient): Created class for transient tests.
	(PokerTableTestCaseTransient.setUp): Wrote function, mostly
	cut-and-paste.
	(PokerTableTestCaseTransient.createPlayer): Wrote function, mostly
	cut-and-paste.
	(PokerTableTestCaseTransient): reorganized transient tests that
	had been in PokerTableTestCase.
	(PokerTableTestCase.test08_8_buyinOverMax): Wrote function.
	(MockService.getTable): Wrote function.
	(MockService.movePlayer): Wrote function.
	(MockClient.getPlayerInfo): Changed to return dictionary.
	(PokerTableTestCase.setUp): Added table2.